# ProductionMyProject

./: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/static/shopapp/css/: style.css
mysite/shopapp/templates/shopapp/: base.html  order_detail.html  order_list.html  products-list.html
